2010-09-16  Zhenyao Mo  <zmo@google.com>

        Unreviewed, TAG fix for two webgl tests in Linux/Win.

        * platform/chromium/test_expectations.txt:

2010-09-16  Patrick Gansterer  <paroga@paroga.com>

        Reviewed by Darin Adler.

        [Mac] Always use a valid string when setting WebKitUserStyleSheetLocationPreferenceKey.
        https://bugs.webkit.org/show_bug.cgi?id=41510

        * platform/mac/fast/loader/user-stylesheet-fast-path-expected.txt:
        * platform/mac/fast/loader/user-stylesheet-fast-path.html:

2010-09-16  Zhenyao Mo  <zmo@google.com>

        Unreviewed, test TAG fix.

        * platform/chromium/test_expectations.txt: should be IMAGE+TEXT, not TEXT+IMAGE.

2010-09-16  Martin Robinson  <mrobinson@igalia.com>

        Unskip some tests that are now passing after libxml fixes in r66336.

        * platform/gtk/Skipped: Unskip passing tests.
        * platform/gtk/svg/custom/js-update-stop-linked-gradient-expected.txt: Added.

2010-09-16  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r67628.
        http://trac.webkit.org/changeset/67628
        https://bugs.webkit.org/show_bug.cgi?id=45904

        broke the build (Requested by eric_carlson on #webkit).

        * media/context-menu-actions-expected.txt: Removed.
        * media/context-menu-actions.html: Removed.
        * platform/mac/Skipped:
        * platform/qt/Skipped:
        * platform/win/Skipped:

2010-09-16  Zhenyao Mo  <zmo@google.com>

        Reviewed by Kenneth Russell.

        Turn on WebGL layout tests for Chromium win/linux
        https://bugs.webkit.org/show_bug.cgi?id=45859

        * platform/chromium/test_expectations.txt: Re-enabling WebGL tests.

2010-09-16  John Gregg  <johnnyg@google.com>

        Unreviewed; chromium test expectations.

        editing/selection/context-menu-on-text.html fails on chromium
        https://bugs.webkit.org/show_bug.cgi?id=45898

        * platform/chromium/test_expectations.txt:
