@@ -1,3 +1,13 @@
+2010-09-16  Jian Li  <jianli@chromium.org>
+
+        Reviewed by David Levin.
+
+        BlobData should be copied for it to be used cross-thread in ThreadableBlobRegistry.
+        https://bugs.webkit.org/show_bug.cgi?id=45909
+
+        * fileapi/ThreadableBlobRegistry.cpp:
+        (WebCore::BlobRegistryContext::BlobRegistryContext):
+
 2010-09-16  Daniel Cheng  <dcheng@chromium.org>
 
         Reviewed by Simon Fraser.
