@@ -1,3 +1,15 @@
+2010-09-16  Jian Li  <jianli@chromium.org>
+
+        Reviewed by David Levin.
+
+        BlobData should be copied for it to be used cross-thread in ThreadableBlobRegistry.
+        https://bugs.webkit.org/show_bug.cgi?id=45909
+
+        Also fix a test issue that we do not calculate the right position to move
+        mouse to on some platform.
+
+        * fast/files/apply-blob-url-to-img.html:
+
 2010-09-16  Zhenyao Mo  <zmo@google.com>
 
         Unreviewed, TAG fix for two webgl tests in Linux/Win.
